Fix template popup item text overflowing because of lack of set width

--- a/components/popup/template-popup/template-popup.scss
+++ b/components/popup/template-popup/template-popup.scss
@@ -2,11 +2,11 @@
   position: absolute;
   background-color: #fff;
   border: 1px solid #ccc;
-
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   font-size: 14px;
   line-height: 22.4px;
   z-index: 2;
+  width: 190px;
 
   .items {
     list-style: none;
